syntax = "proto3";
option java_multiple_files= true;

package com.fayardev.followservice.follow;

service FollowService {
  rpc GetFollow(FollowRequest) returns (FollowResponse);
}

message FollowRequest {
  bytes uuid = 1;
  bytes followerUuid = 2;
  bytes followingUuid = 3;
}

message FollowResponse {
  bytes uuid = 1;
  bytes followerUuid = 2;
  string followingUuid = 3;
}