syntax = "proto3";
option java_multiple_files= true;

package com.fayardev.userservice.user;

service UserService {
  rpc GetUserByUuid(UserRequest) returns (UserResponse);
  rpc GetUserByUid(UserRequest) returns (UserResponse);
}

message UserRequest {
  string uuid = 1;
  string uid = 2;
  string name = 3;
  string surname = 4;
  string email_address = 5;
  bool confirm = 6;
  bool is_active = 7;
  bool verified = 8;
  string gender = 9;
  string birth_of_date = 10;
  string avatar = 11;
}

message UserResponse {
  string uuid = 1;
  string uid = 2;
  string name = 3;
  string surname = 4;
  string email_address = 5;
  bool confirm = 6;
  bool is_active = 7;
  bool verified = 8;
  string gender = 9;
  string birth_of_date = 10;
  string avatar = 11;
}